# ForRocket

./: .gitignore  CMakeLists.txt  Char_Sheet.xlsx  Dockerfile  EngineConfig.json  ForRocket.py  LICENSE  README.md  Simulation.f90  Thrust.csv  build.sh  build_msys.sh  build_package.sh  coordinate.py  cs2data.py  environment.py  extend_result_aerodynamics_heating.py  extend_result_launcher.py  extend_result_telemetry.py  extend_result_wind_limit.py  make_wind.py  makefile  multi_solver.py  odeint_test.cpp  packing_release.sh  plot_result.py  rocket_config.json  rocket_dynamics.py  setup_libs.sh  wind.csv
BarrowmanFlow/: BarrowmanFlow.py  LICENSE  fin_optimize.py  simple_rocket.py
Flight-Heating/: LICENSE  environment.py  heating.py
FlightHeating/: heating.py
LaunchPoint/: LLHProvider.py
LaunchSiteData/: LLHProvider.py  LaunchSite.py  Noshiro_land_3rd.py  Noshiro_sea.py  Taiki_land.py  judge_inside.py  wind_law_method.py
MapPlotter/: MapPlotter.py
ModuleFolder/: Airframe.f90  Environment.f90  Rocket_Class.f90  Rocket_Dynamics.f90  Rotation.f90  Standard_Collection.f90  Translation.f90  atmos76.f90  makefile
Simulator/: __init__.py  coordinate.py  dynamics.py  environment.py  heating.py  launcher_dynamics.py  parachute_dynamics.py  result_plot.py  rocket_dynamics.py  rocket_param.py  solver.py
docs/: ClassDiagram_Drawio.xml  CodingStandard.md  input_file.md  usage_document.md
elem-verify/: copy_cstr_test.cpp  eigen_test.cpp  instance_test.cpp  odeint_test.cpp  scope_test.cpp  this_test.cpp
examples/: post.py  runner.py  sample_CA.csv  sample_config_area.json  sample_config_list_stage1.json  sample_config_solver.json  sample_param_rocket.json
inc/: interpolate.hpp  json_control.hpp
lib/: setup_boost.sh  setup_eigen.sh  setup_json.sh
src/: DynamicsSolver.cpp  DynamicsSolver.hpp  Environment.f90  Environment.hpp  FlightController.cpp  FlightController.hpp  FlightDataRecorder.hpp  ForRocket.cpp  LibDataIO.cpp  (+73 more)
(+168 files in other folders)
